Bug #12577: blue theme: submit window should not need scrollbar

--- a/static/4/css/lights-on.css
+++ b/static/4/css/lights-on.css
@@ -1860,18 +1860,6 @@ div.contentWrap {
 }
 
 
-
-
-.inner_content #submit_video table{
-width: 940px;
-}
-
-.inner_content #submit_video table #id_url{
-width: 870px;
-}
-
-
-
 #submit_video table{
 width: 530px;
 }
